--- a/project.html
+++ b/project.html
@@ -10,22 +10,22 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "require.js", "project.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "require.js", "jquery.musepolyfill.bgsize.js", "project.css"], "outOfDate":[]};
 </script>
   
   <link rel="shortcut icon" href="images/favicon.ico?crc=236454869"/>
   <title>project</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4180702233"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=179252601"/>
-  <link rel="stylesheet" type="text/css" href="css/project.css?crc=4221696521" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=491024139"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3768490696"/>
+  <link rel="stylesheet" type="text/css" href="css/project.css?crc=233756102" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/quicksand:n4,i4:all.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/J-eGAGDd1fIARUApwF6laOb9uZAeRq_pShDBtPauRcJfe1XJoS7HfyJTwRIUF2bowDFLjcJ3Z2ZRZQZywAJXZ2i8FAsyjAIuFAwojRmKZ2Mojhw-HPG0dc8XjhyyZcI0dA9Cdc8XjhyyZcI0dA9CiaiaOcoTieFGjAZyOcu8J6iXZW4l-AoyH6GJCpJgIMMjgfMgP6sFiWF8qMYW8pnngb.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/VtkG7Q4Bnd4gprddCixT9pzXqfJ96HD7Gw8gLTfMWs9fe1XJoS7HfyJTwRIUF2bowDFLjcJ3Z2ZRZQZywAJXZ2i8FAsyjAIuFAwojRmKZ2Mojhw-HPG0dc8XjhyyZcI0dA9Cdc8XjhyyZcI0dA9CiaiaOcoTieFGjAZyOcu8J6iXZW4l-AoyH6GJCpJgIMMjgfMgP6sFiWF8qMY8rSQlgb.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -43,27 +43,27 @@ transition:300ms;
  <body>
 
   <div class="clearfix" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="pppu7871-4"><!-- column -->
-    <div class="clearfix colelem" id="ppu7871-4"><!-- group -->
-     <div class="clearfix grpelem" id="pu7871-4"><!-- column -->
-      <a class="nonblock nontext clearfix colelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="body-termina-11" id="u7871">LABS</span></p></a>
-      <div class="clearfix colelem" id="pu30117"><!-- group -->
-       <!-- m_editable region-id="editable-static-tag-U30117-BP_infinity" template="project.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
-       <a class="nonblock nontext clip_frame clearfix grpelem" id="u30117" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U30117" data-muse-type="img_frame"><!-- image --><img class="position_content" id="u30117_img" src="images/8_attamatic_textneck3_27663682693_o.jpg?crc=3890889582" alt="" width="532" height="298" data-muse-src="images/8_attamatic_textneck3_27663682693_o.jpg?crc=3890889582"/></a>
-       <!-- /m_editable -->
-       <!-- m_editable region-id="editable-static-tag-U30120-BP_infinity" template="project.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-       <a class="nonblock nontext rgba-background clearfix grpelem" id="u30120-13" href="attamatic.html#textneck_short" data-href="anchor:U14827:U19412" data-muse-uid="U30120" data-muse-type="txt_frame"><!-- content --><p id="u30120-2">Text-Neck</p><p id="u30120-4">Wearable Technology, Physical Computing,</p><p id="u30120-6">Research</p><p id="u30120-7">&nbsp;</p><p id="u30120-8">&nbsp;</p><p id="u30120-9">&nbsp;</p><p id="u30120-11">Part of Atta-matic: Mind the Body series</p></a>
-       <!-- /m_editable -->
-      </div>
-     </div>
-     <a class="nonblock nontext clearfix grpelem" id="u153-4" href="reel.html" data-href="page:U2771"><!-- content --><p id="u153-2"><span class="body-termina-11" id="u153">REEL</span></p></a>
+   <div class="clearfix grpelem" id="ppu154-4"><!-- column -->
+    <div class="clearfix colelem" id="pu154-4"><!-- group -->
      <a class="nonblock nontext clearfix grpelem" id="u154-4" href="about.html" data-href="page:U2777"><!-- content --><p id="u154-2"><span class="body-termina-11" id="u154">ABOUT</span></p></a>
      <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u7869-4" href="project.html" data-href="page:U15339"><!-- content --><p id="u7869-2"><span class="body-termina-11" id="u7869">PROJECTS</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u26524-4" href="work.html" data-href="page:U26837"><!-- content --><p id="u26524-2"><span class="body-termina-11" id="u26524">DESIGN</span></p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u153-4" href="reel.html" data-href="page:U2771"><!-- content --><p id="u153-2"><span class="body-termina-11" id="u153">REEL</span></p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="body-termina-11" id="u7871">LABS</span></p></a>
      <div class="clip_frame grpelem" id="u30898"><!-- image -->
       <img class="block" id="u30898_img" src="images/nitchatothong_alpha.gif?crc=325294552" alt="" width="193" height="193"/>
      </div>
      <a class="anchor_item grpelem" id="top_projectpage"></a>
+    </div>
+    <div class="clearfix colelem" id="ppu30117"><!-- group -->
+     <div class="clearfix grpelem" id="pu30117"><!-- group -->
+      <!-- m_editable region-id="editable-static-tag-U30117-BP_infinity" template="project.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
+      <a class="nonblock nontext clip_frame clearfix grpelem" id="u30117" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U30117" data-muse-type="img_frame"><!-- image --><img class="position_content" id="u30117_img" src="images/8_attamatic_textneck3_27663682693_o.jpg?crc=3890889582" alt="" width="532" height="298" data-muse-src="images/8_attamatic_textneck3_27663682693_o.jpg?crc=3890889582"/></a>
+      <!-- /m_editable -->
+      <!-- m_editable region-id="editable-static-tag-U30120-BP_infinity" template="project.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+      <a class="nonblock nontext rgba-background clearfix grpelem" id="u30120-13" href="attamatic.html#textneck_short" data-href="anchor:U14827:U19412" data-muse-uid="U30120" data-muse-type="txt_frame"><!-- content --><p id="u30120-2">Text-Neck</p><p id="u30120-4">Wearable Technology, Physical Computing,</p><p id="u30120-6">Research</p><p id="u30120-7">&nbsp;</p><p id="u30120-8">&nbsp;</p><p id="u30120-9">&nbsp;</p><p id="u30120-11">Part of Atta-matic: Mind the Body series</p></a>
+      <!-- /m_editable -->
+     </div>
      <!-- m_editable region-id="editable-static-tag-U30115-BP_infinity" template="project.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
      <a class="nonblock nontext clip_frame grpelem" id="u30115" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U30115" data-muse-type="img_frame"><!-- image --><img class="block" id="u30115_img" src="images/sfpc%20showcase_13-crop-u30115.jpg?crc=4058234968" alt="" width="400" height="240" data-muse-src="images/sfpc%20showcase_13-crop-u30115.jpg?crc=4058234968"/></a>
      <!-- /m_editable -->
