--- a/work.html
+++ b/work.html
@@ -10,22 +10,22 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "require.js", "work.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "require.js", "jquery.musepolyfill.bgsize.js", "work.css"], "outOfDate":[]};
 </script>
   
   <link rel="shortcut icon" href="images/favicon.ico?crc=236454869"/>
   <title>work</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4180702233"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=179252601"/>
-  <link rel="stylesheet" type="text/css" href="css/work.css?crc=4142839292" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=491024139"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3768490696"/>
+  <link rel="stylesheet" type="text/css" href="css/work.css?crc=4018505921" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/quicksand:n4,i4:all.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/ufSFfC6F8uKc4qdR9u-bu3FBvTOCbhV3fFmpVwPsLWqfe1XJoS7HfyJTwRIUF2bowDFLjcJ3Z2ZRZQZywAJXZ2i8FAsyjAIuFAwojRmKZ2Mojhw-HPG0dc8XjhyyZcI0dA9Cdc8XjhyyZcI0dA9CiaiaOcoTieFGjAZyOcu8J6iXZW4l-AoyH6GJCpJgIMMjgfMgP6sFiWF8qMY68pnngb.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/mX7qQk3iAlg69XVmzlcUK4sI7WPZObsnrI_qWqc6luXfe1XJoS7HfyJTwRIUF2bowDFLjcJ3Z2ZRZQZywAJXZ2i8FAsyjAIuFAwojRmKZ2Mojhw-HPG0dc8XjhyyZcI0dA9Cdc8XjhyyZcI0dA9CiaiaOcoTieFGjAZyOcu8J6iXZW4l-AoyH6GJCpJgIMMjgfMgP6sFiWF8qMYGrSQlgb.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -45,24 +45,25 @@ transition:300ms;
   <div class="clearfix" id="page"><!-- group -->
    <div class="clearfix grpelem" id="ptop_projectpage"><!-- column -->
     <a class="anchor_item colelem" id="top_projectpage"></a>
-    <div class="clearfix colelem" id="ppu7871-4"><!-- group -->
-     <div class="clearfix grpelem" id="pu7871-4"><!-- column -->
-      <a class="nonblock nontext clearfix colelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="body-termina-11" id="u7871">LABS</span></p></a>
-      <div class="clearfix colelem" id="pu30847"><!-- group -->
-       <!-- m_editable region-id="editable-static-tag-U30847-BP_infinity" template="work.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
-       <a class="nonblock nontext clip_frame grpelem" id="u30847" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U30847" data-muse-type="img_frame"><!-- image --><img class="block" id="u30847_img" src="images/wonderfruit2018_sirintip_tour-200-crop-u30847.jpg?crc=4013501931" alt="" width="400" height="241" data-muse-src="images/wonderfruit2018_sirintip_tour-200-crop-u30847.jpg?crc=4013501931"/></a>
-       <!-- /m_editable -->
-       <!-- m_editable region-id="editable-static-tag-U30854-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-       <a class="nonblock nontext rgba-background clearfix grpelem" id="u30854-8" href="shoulder.html" data-href="page:U30404" data-muse-uid="U30854" data-muse-type="txt_frame"><!-- content --><p id="u30854-2">SHOULDER PIECE for</p><p id="u30854-4">TRIBUS TOUR</p><p id="u30854-6">Art Director, Designer, Fabricator</p></a>
-       <!-- /m_editable -->
-      </div>
-     </div>
-     <a class="nonblock nontext clearfix grpelem" id="u153-4" href="reel.html" data-href="page:U2771"><!-- content --><p id="u153-2"><span class="body-termina-11" id="u153">REEL</span></p></a>
+    <div class="clearfix colelem" id="pu154-4"><!-- group -->
      <a class="nonblock nontext clearfix grpelem" id="u154-4" href="about.html" data-href="page:U2777"><!-- content --><p id="u154-2"><span class="body-termina-11" id="u154">ABOUT</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u7869-4" href="project.html" data-href="page:U15339"><!-- content --><p id="u7869-2"><span class="body-termina-11" id="u7869">PROJECTS</span></p></a>
      <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u26524-4" href="work.html" data-href="page:U26837"><!-- content --><p id="u26524-2"><span class="body-termina-11" id="u26524">DESIGN</span></p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u153-4" href="reel.html" data-href="page:U2771"><!-- content --><p id="u153-2"><span class="body-termina-11" id="u153">REEL</span></p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="body-termina-11" id="u7871">LABS</span></p></a>
      <div class="clip_frame grpelem" id="u30898"><!-- image -->
       <img class="block" id="u30898_img" src="images/nitchatothong_alpha.gif?crc=325294552" alt="" width="193" height="193"/>
+     </div>
+     <a class="anchor_item grpelem" id="top-work"></a>
+    </div>
+    <div class="clearfix colelem" id="ppu30847"><!-- group -->
+     <div class="clearfix grpelem" id="pu30847"><!-- group -->
+      <!-- m_editable region-id="editable-static-tag-U30847-BP_infinity" template="work.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
+      <a class="nonblock nontext clip_frame grpelem" id="u30847" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U30847" data-muse-type="img_frame"><!-- image --><img class="block" id="u30847_img" src="images/wonderfruit2018_sirintip_tour-200-crop-u30847.jpg?crc=4013501931" alt="" width="400" height="241" data-muse-src="images/wonderfruit2018_sirintip_tour-200-crop-u30847.jpg?crc=4013501931"/></a>
+      <!-- /m_editable -->
+      <!-- m_editable region-id="editable-static-tag-U30854-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+      <a class="nonblock nontext rgba-background clearfix grpelem" id="u30854-8" href="shoulder.html" data-href="page:U30404" data-muse-uid="U30854" data-muse-type="txt_frame"><!-- content --><p id="u30854-2">SHOULDER PIECE for</p><p id="u30854-4">TRIBUS TOUR</p><p id="u30854-6">Art Director, Designer, Fabricator</p></a>
+      <!-- /m_editable -->
      </div>
      <!-- m_editable region-id="editable-static-tag-U26717-BP_infinity" template="work.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
      <a class="nonblock nontext clip_frame grpelem" id="u26717" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U26717" data-muse-type="img_frame"><!-- image --><img class="block" id="u26717_img" src="images/tip_cover-crop-u26717.jpg?crc=4082276319" alt="" width="400" height="241" data-muse-src="images/tip_cover-crop-u26717.jpg?crc=4082276319"/></a>
@@ -70,35 +71,28 @@ transition:300ms;
      <!-- m_editable region-id="editable-static-tag-U26691-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
      <a class="nonblock nontext rgba-background clearfix grpelem" id="u26691-6" href="tribus.html" data-href="page:U25797" data-muse-uid="U26691" data-muse-type="txt_frame"><!-- content --><p id="u26691-2">TRIBUS</p><p id="u26691-4">Art direction, Illustration, Graphic Design</p></a>
      <!-- /m_editable -->
-     <a class="anchor_item grpelem" id="top-work"></a>
     </div>
-    <div class="clearfix colelem" id="pppu29631"><!-- group -->
-     <div class="clearfix grpelem" id="ppu29631"><!-- column -->
-      <div class="clearfix colelem" id="pu29631"><!-- group -->
-       <!-- m_editable region-id="editable-static-tag-U29631-BP_infinity" template="work.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
-       <a class="nonblock nontext clip_frame grpelem" id="u29631" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U29631" data-muse-type="img_frame"><!-- image --><img class="block" id="u29631_img" src="images/ahtt_namecard-crop-u29631.jpg?crc=155050826" alt="" width="400" height="226" data-muse-src="images/ahtt_namecard-crop-u29631.jpg?crc=155050826"/></a>
-       <!-- /m_editable -->
-       <!-- m_editable region-id="editable-static-tag-U27139-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-       <a class="nonblock nontext rgba-background clearfix grpelem" id="u27139-6" href="anyways.html" data-href="page:U27669" data-muse-uid="U27139" data-muse-type="txt_frame"><!-- content --><p id="u27139-2">Anyways, Here's the Thing</p><p id="u27139-4">Art direction, Identity design, Graphic Design</p></a>
-       <!-- /m_editable -->
-      </div>
-      <div class="clearfix colelem" id="pu29617"><!-- group -->
-       <!-- m_editable region-id="editable-static-tag-U29617-BP_infinity" template="work.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
-       <a class="nonblock nontext clip_frame grpelem" id="u29617" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U29617" data-muse-type="img_frame"><!-- image --><img class="block" id="u29617_img" src="images/55bar_feb28_aw_sm-crop-u29617.png?crc=97859911" alt="" width="400" height="214" data-muse-src="images/55bar_feb28_aw_sm-crop-u29617.png?crc=97859911"/></a>
-       <!-- /m_editable -->
-       <!-- m_editable region-id="editable-static-tag-U29614-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-       <a class="nonblock nontext rgba-background clearfix grpelem" id="u29614-6" href="jazzjam.html" data-href="page:U29910" data-muse-uid="U29614" data-muse-type="txt_frame"><!-- content --><p id="u29614-2">Jazz Live Series</p><p id="u29614-4">Poster Design</p></a>
-       <!-- /m_editable -->
-      </div>
-     </div>
+    <div class="clearfix colelem" id="pu26671"><!-- group -->
      <!-- m_editable region-id="editable-static-tag-U26671-BP_infinity" template="work.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
      <a class="nonblock nontext clip_frame clearfix grpelem" id="u26671" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U26671" data-muse-type="img_frame"><!-- image --><img class="position_content" id="u26671_img" src="images/betweenspaces_printed_editedsm-4.jpg?crc=433621374" alt="" width="427" height="240" data-muse-src="images/betweenspaces_printed_editedsm-4.jpg?crc=433621374"/></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U29617-BP_infinity" template="work.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext clip_frame grpelem" id="u29617" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U29617" data-muse-type="img_frame"><!-- image --><img class="block" id="u29617_img" src="images/55bar_feb28_aw_sm-crop-u29617.png?crc=97859911" alt="" width="400" height="214" data-muse-src="images/55bar_feb28_aw_sm-crop-u29617.png?crc=97859911"/></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U29631-BP_infinity" template="work.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext clip_frame grpelem" id="u29631" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U29631" data-muse-type="img_frame"><!-- image --><img class="block" id="u29631_img" src="images/ahtt_namecard-crop-u29631.jpg?crc=155050826" alt="" width="400" height="226" data-muse-src="images/ahtt_namecard-crop-u29631.jpg?crc=155050826"/></a>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U26732-BP_infinity" template="work.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
      <a class="nonblock nontext clip_frame grpelem" id="u26732" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U26732" data-muse-type="img_frame"><!-- image --><img class="block" id="u26732_img" src="images/funk_cover-crop-u26732.jpg?crc=4129758912" alt="" width="400" height="215" data-muse-src="images/funk_cover-crop-u26732.jpg?crc=4129758912"/></a>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U26675-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
      <a class="nonblock nontext rgba-background clearfix grpelem" id="u26675-6" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U26675" data-muse-type="txt_frame"><!-- content --><p id="u26675-2">Between Spaces</p><p id="u26675-4">Art direction, Exhibition Identity, Graphic Design</p></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U27139-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext rgba-background clearfix grpelem" id="u27139-6" href="anyways.html" data-href="page:U27669" data-muse-uid="U27139" data-muse-type="txt_frame"><!-- content --><p id="u27139-2">Anyways, Here's the Thing</p><p id="u27139-4">Art direction, Identity design, Graphic Design</p></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U29614-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext rgba-background clearfix grpelem" id="u29614-6" href="jazzjam.html" data-href="page:U29910" data-muse-uid="U29614" data-muse-type="txt_frame"><!-- content --><p id="u29614-2">Jazz Live Series</p><p id="u29614-4">Poster Design</p></a>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U26684-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
      <a class="nonblock nontext rgba-background clearfix grpelem" id="u26684-6" href="funk.html" data-href="page:U24624" data-muse-uid="U26684" data-muse-type="txt_frame"><!-- content --><p id="u26684-2">FUNK</p><p id="u26684-4">Art direction, Illustration, Graphic Design</p></a>
@@ -107,7 +101,7 @@ transition:300ms;
     <div class="clearfix colelem" id="pu29357"><!-- group -->
      <!-- m_editable region-id="editable-static-tag-U29357-BP_infinity" template="work.html" data-type="image" -->
      <div class="clip_frame clearfix grpelem" id="u29357" data-muse-uid="U29357" data-muse-type="img_frame"><!-- image -->
-      <img class="position_content" id="u29357_img" src="images/pijika2.gif?crc=77994269" alt="" width="514" height="284" data-muse-src="images/pijika2.gif?crc=77994269"/>
+      <img class="position_content" id="u29357_img" src="images/pijika.gif?crc=77994269" alt="" width="514" height="284" data-muse-src="images/pijika.gif?crc=77994269"/>
      </div>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U29345-BP_infinity" template="work.html" data-type="image" -->
