--- a/labs.html
+++ b/labs.html
@@ -17,15 +17,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Labs</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4180702233"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=405704163"/>
-  <link rel="stylesheet" type="text/css" href="css/labs.css?crc=4197638802" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4196648491"/>
+  <link rel="stylesheet" type="text/css" href="css/labs.css?crc=3772257461" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/quicksand:n4,i4:all.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/v-Te6WGKrVpA13SLp2UHZvvjkCFE4QsmQwJuRM8jHqSfe1XJoS7HfyJTwRIUF2bowDFLjcJ3Z2ZRZQZywAJXZ2i8FAsyjAIuFAwojRmKZ2Mojhw-HPG0dc8XjhyyZcI0dA9Cdc8XjhyyZcI0dA9CiaiaOcoTieFGjAZyOcu8J6iXZW4l-AoyH6GJCpJgIMMjgfMgP6sFiWF8qMYphN1lgb.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/JMF-kbX6xK1QVo47VBOZIm43Juc8rzUEfhVVTQCqNiCfe1XJoS7HfyJTwRIUF2bowDFLjcJ3Z2ZRZQZywAJXZ2i8FAsyjAIuFAwojRmKZ2Mojhw-HPG0dc8XjhyyZcI0dA9Cdc8XjhyyZcI0dA9CiaiaOcoTieFGjAZyOcu8J6iXZW4l-AoyH6GJCpJgIMMjgfMgP6sFiWF8qMeFon2_gb.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -53,12 +53,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
       <!-- /m_editable -->
      </div>
-     <div class="clearfix grpelem" id="ppu26524-4"><!-- column -->
-      <div class="clearfix colelem" id="pu26524-4"><!-- group -->
-       <a class="nonblock nontext clearfix grpelem" id="u26524-4" href="work.html" data-href="page:U26837"><!-- content --><p id="u26524-2"><span class="body-termina-11" id="u26524">DESIGN</span></p></a>
-       <a class="nonblock nontext clearfix grpelem" id="u153-4" href="reel.html" data-href="page:U2771"><!-- content --><p id="u153-2"><span class="body-termina-11" id="u153">REEL</span></p></a>
-       <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="body-termina-11" id="u7871">LABS</span></p></a>
-      </div>
+     <div class="clearfix grpelem" id="pu7871-4"><!-- column -->
+      <a class="nonblock nontext MuseLinkActive clearfix colelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="body-termina-11" id="u7871">LABS</span></p></a>
       <!-- m_editable region-id="editable-static-tag-U7936" template="labs.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
       <div class="pointer_cursor museBGSize clearfix colelem" id="u7936" data-muse-uid="U7936"><!-- group -->
        <a class="block" href="musketeers.html" data-href="page:U1578"><!-- Block link tag --></a>
@@ -91,7 +87,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext clearfix grpelem" id="u26657-4" href="https://github.com/nitchafame"><!-- content --><p id="u26657-2"><span class="body-termina-11" id="u26657">GITHUB</span></p></a>
     </div>
     <div class="clearfix colelem" id="u26579-4" data-IBE-flags="txtStyleSrc"><!-- content -->
-     <p id="u26579-2"><span class="body-termina-11" id="u26579">© 2009–2019 NITCHA TOTHONG</span></p>
+     <p id="u26579-2"><span class="body-termina-11" id="u26579">© 2009–2020 NITCHA TOTHONG</span></p>
     </div>
    </div>
    <div class="clearfix grpelem" id="pu9463"><!-- column -->
