--- a/melody.html
+++ b/melody.html
@@ -17,15 +17,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Melody</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4180702233"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4196648491"/>
-  <link rel="stylesheet" type="text/css" href="css/melody.css?crc=248305596" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=80932935"/>
+  <link rel="stylesheet" type="text/css" href="css/melody.css?crc=4048845538" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/quicksand:n4,i4,n3:all.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/uwsZh-Cho1h0B1gVQHND1s5LHcn3gOa_cv2y_mWXcICfe1XJoS7HfyJTwRIUF2bowDFLjcJ3Z2ZRZQZywAJXZ2i8FAsyjAIuFAwojRmKZ2Mojhw-HPG0dc8XjhyyZcI0dA9Cdc8XjhyyZcI0dA9CiaiaOcoTieFGjAZyOcu8J6iXZW4l-AoyH6GJCpJgIMMjgfMgP6sFiWF8qMeQon2_gb.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/9YA0Zi0nPkmHQCjKLE-Q8IT5qGDGI-8UX5q4zX5P7e3fe1XJoS7HfyJTwRIUF2bowDFLjcJ3Z2ZRZQZywAJXZ2i8FAsyjAIuFAwojRmKZ2Mojhw-HPG0dc8XjhyyZcI0dA9Cdc8XjhyyZcI0dA9CiaiaOcoTieFGjAZyOcu8J6iXZW4l-AoyH6GJCpJgIMMjgfMgP6sFiWF8qMYZkw2rgb.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -39,7 +39,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="position_content" id="page_position_content">
     <div class="clearfix colelem" id="pu154-4"><!-- group -->
      <a class="nonblock nontext clearfix grpelem" id="u154-4" href="about.html" data-href="page:U2777"><!-- content --><p id="u154-2"><span class="body-termina-11" id="u154">ABOUT</span></p></a>
-     <a class="nonblock nontext clearfix grpelem" id="u7869-4" href="project.html" data-href="page:U15339"><!-- content --><p id="u7869-2"><span class="body-termina-11" id="u7869">PROJECTS</span></p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u7869-4" href="work.html" data-href="page:U26837"><!-- content --><p id="u7869-2"><span class="body-termina-11" id="u7869">WORKS</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="body-termina-11" id="u7871">LABS</span></p></a>
      <div class="clip_frame grpelem" id="u30898"><!-- image -->
       <img class="block" id="u30898_img" src="images/nitchatothong_alpha.gif?crc=325294552" alt="" width="193" height="193"/>
@@ -68,17 +68,17 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <div class="SSSlideLinks clearfix" data-col-pos="1" id="u8443"><!-- horizontal-rows box -->
         <!-- m_editable region-id="editable-static-tag-U8450-BP_infinity" template="melody.html" data-type="image" data-ice-options="clickable" -->
         <div class="SSSlideLink clip_frame grpelem" data-col-pos="0" id="u8450" data-muse-uid="U8450" data-muse-type="img_frame"><!-- image -->
-         <img class="block" data-col-pos="0" id="u8450_img" src="images/melody1-crop-u8450.jpg?crc=174480973" alt="" width="82" height="55" data-muse-src="images/melody1-crop-u8450.jpg?crc=174480973"/>
+         <img class="block" data-col-pos="0" id="u8450_img" src="images/melody1-crop-u8450.jpg?crc=256902955" alt="" width="82" height="55" data-muse-src="images/melody1-crop-u8450.jpg?crc=256902955"/>
         </div>
         <!-- /m_editable -->
         <!-- m_editable region-id="editable-static-tag-U8452-BP_infinity" template="melody.html" data-type="image" data-ice-options="clickable" -->
         <div class="SSSlideLink clip_frame grpelem" data-col-pos="1" id="u8452" data-muse-uid="U8452" data-muse-type="img_frame"><!-- image -->
-         <img class="block" data-col-pos="1" id="u8452_img" src="images/melody2-crop-u8452.jpg?crc=4141460273" alt="" width="82" height="55" data-muse-src="images/melody2-crop-u8452.jpg?crc=4141460273"/>
+         <img class="block" data-col-pos="1" id="u8452_img" src="images/melody2-crop-u8452.jpg?crc=3957987405" alt="" width="82" height="55" data-muse-src="images/melody2-crop-u8452.jpg?crc=3957987405"/>
         </div>
         <!-- /m_editable -->
         <!-- m_editable region-id="editable-static-tag-U8446-BP_infinity" template="melody.html" data-type="image" data-ice-options="clickable" -->
         <div class="SSSlideLink clip_frame grpelem" data-col-pos="2" id="u8446" data-muse-uid="U8446" data-muse-type="img_frame"><!-- image -->
-         <img class="block" data-col-pos="2" id="u8446_img" src="images/melody4-crop-u8446.jpg?crc=3817419436" alt="" width="82" height="55" data-muse-src="images/melody4-crop-u8446.jpg?crc=3817419436"/>
+         <img class="block" data-col-pos="2" id="u8446_img" src="images/melody4-crop-u8446.jpg?crc=431418215" alt="" width="82" height="55" data-muse-src="images/melody4-crop-u8446.jpg?crc=431418215"/>
         </div>
         <!-- /m_editable -->
        </div>
