--- a/3d.html
+++ b/3d.html
@@ -17,15 +17,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>3D</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4180702233"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4196648491"/>
-  <link rel="stylesheet" type="text/css" href="css/3d.css?crc=4277235728" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=80932935"/>
+  <link rel="stylesheet" type="text/css" href="css/3d.css?crc=426221964" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/quicksand:n4:all.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/_pEZC3fijUY7eBZGrinegg-FVTmbpPmw34Cg47b9Bb9fe1XJoS7HfyJTwRIUF2bowDFLjcJ3Z2ZRZQZywAJXZ2i8FAsyjAIuFAwojRmKZ2Mojhw-HPG0dc8XjhyyZcI0dA9Cdc8XjhyyZcI0dA9CiaiaOcoTieFGjAZyOcu8J6iXZW4l-AoyH6GJCpJgIMMjgfMgP6sFiWF8qMejon2_gb.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/BwbUou_q-QSgLA4qvdKVdf31Eenu2cid9PK_cUGogf3fe1XJoS7HfyJTwRIUF2bowDFLjcJ3Z2ZRZQZywAJXZ2i8FAsyjAIuFAwojRmKZ2Mojhw-HPG0dc8XjhyyZcI0dA9Cdc8XjhyyZcI0dA9CiaiaOcoTieFGjAZyOcu8J6iXZW4l-AoyH6GJCpJgIMMjgfMgP6sFiWF8qMY3kw2rgb.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -43,7 +43,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="clearfix grpelem" id="ppu154-4"><!-- column -->
      <div class="clearfix colelem" id="pu154-4"><!-- group -->
       <a class="nonblock nontext clearfix grpelem" id="u154-4" href="about.html" data-href="page:U2777"><!-- content --><p id="u154-2"><span class="body-termina-11" id="u154">ABOUT</span></p></a>
-      <a class="nonblock nontext clearfix grpelem" id="u7869-4" href="project.html" data-href="page:U15339"><!-- content --><p id="u7869-2"><span class="body-termina-11" id="u7869">PROJECTS</span></p></a>
+      <a class="nonblock nontext clearfix grpelem" id="u7869-4" href="work.html" data-href="page:U26837"><!-- content --><p id="u7869-2"><span class="body-termina-11" id="u7869">WORKS</span></p></a>
       <a class="nonblock nontext clearfix grpelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="body-termina-11" id="u7871">LABS</span></p></a>
      </div>
      <!-- m_editable region-id="editable-static-tag-U24764-BP_infinity" template="3d.html" data-type="image" -->
