--- a/5in5.html
+++ b/5in5.html
@@ -17,15 +17,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>5in5</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4180702233"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4196648491"/>
-  <link rel="stylesheet" type="text/css" href="css/5in5.css?crc=459760404" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=80932935"/>
+  <link rel="stylesheet" type="text/css" href="css/5in5.css?crc=412596830" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/quicksand:n4,i4:all.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/tIywDI28IX5c1le_ZmbkLM1ykGZfgt8L7n2bqKd4yubfe1XJoS7HfyJTwRIUF2bowDFLjcJ3Z2ZRZQZywAJXZ2i8FAsyjAIuFAwojRmKZ2Mojhw-HPG0dc8XjhyyZcI0dA9Cdc8XjhyyZcI0dA9CiaiaOcoTieFGjAZyOcu8J6iXZW4l-AoyH6GJCpJgIMMjgfMgP6sFiWF8qMemon2_gb.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/wQy_QYc8Appm4OZFwaR0F_WXuCDiVNHg2RXeEeVOwGXfe1XJoS7HfyJTwRIUF2bowDFLjcJ3Z2ZRZQZywAJXZ2i8FAsyjAIuFAwojRmKZ2Mojhw-HPG0dc8XjhyyZcI0dA9Cdc8XjhyyZcI0dA9CiaiaOcoTieFGjAZyOcu8J6iXZW4l-AoyH6GJCpJgIMMjgfMgP6sFiWF8qMYpkw2rgb.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -39,7 +39,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="position_content" id="page_position_content">
     <div class="clearfix colelem" id="pu154-4"><!-- group -->
      <a class="nonblock nontext clearfix grpelem" id="u154-4" href="about.html" data-href="page:U2777"><!-- content --><p id="u154-2"><span class="body-termina-11" id="u154">ABOUT</span></p></a>
-     <a class="nonblock nontext clearfix grpelem" id="u7869-4" href="project.html" data-href="page:U15339"><!-- content --><p id="u7869-2"><span class="body-termina-11" id="u7869">PROJECTS</span></p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u7869-4" href="work.html" data-href="page:U26837"><!-- content --><p id="u7869-2"><span class="body-termina-11" id="u7869">WORKS</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="body-termina-11" id="u7871">LABS</span></p></a>
      <div class="clip_frame grpelem" id="u30898"><!-- image -->
       <img class="block" id="u30898_img" src="images/nitchatothong_alpha.gif?crc=325294552" alt="" width="193" height="193"/>
@@ -105,7 +105,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="SSSlideLinks clearfix" data-col-pos="1" id="u9697"><!-- horizontal-rows box -->
        <!-- m_editable region-id="editable-static-tag-U9698-BP_infinity" template="5in5.html" data-type="image" data-ice-options="clickable" -->
        <div class="SSSlideLink clip_frame grpelem" data-col-pos="0" id="u9698" data-muse-uid="U9698" data-muse-type="img_frame"><!-- image -->
-        <img class="block" data-col-pos="0" id="u9698_img" src="images/25_3-crop-u9698.jpg?crc=73341495" alt="" width="60" height="45" data-muse-src="images/25_3-crop-u9698.jpg?crc=73341495"/>
+        <img class="block" data-col-pos="0" id="u9698_img" src="images/25_3-crop-u9698.jpg?crc=4118955516" alt="" width="60" height="45" data-muse-src="images/25_3-crop-u9698.jpg?crc=4118955516"/>
        </div>
        <!-- /m_editable -->
       </div>
