--- a/about.html
+++ b/about.html
@@ -17,15 +17,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>About</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4180702233"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4196648491"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?crc=62160523" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=80932935"/>
+  <link rel="stylesheet" type="text/css" href="css/about.css?crc=388268153" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/quicksand:n4:all.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/U1_NHs_o3elzw07jHoF9-03zBOQaJTqlqR77DgKCDsIfeGqgf5WHK6GPHQJUwQbX5QwDWh4Kwebhjh9hjQBKFebaZQmqjAByFQmR5AJujcb35AFReKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJYiemkdA80jPGHfOxKMsMMeMS6MPGHfOYKMsMMeMb6M9GIQWmDZZMgR5-3r39.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/qpjC4H4_FPvsD18h1I4dJCm1sKOXHPpA3vLnnlumYJXfeGqgf5WHK6GPHQJUwQbX5QwDWh4Kwebhjh9hjQBKFebaZQmqjAByFQmR5AJujcb35AFReKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJYiemkdA80jPGHfOxKMsMMeMS6MPGHfOYKMsMMeMb6M9GIQWmDZZMgkCRMx69.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -41,7 +41,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="clearfix grpelem" id="ppu154-4"><!-- column -->
       <div class="clearfix colelem" id="pu154-4"><!-- group -->
        <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u154-4" href="about.html" data-href="page:U2777"><!-- content --><p id="u154-2"><span class="body-termina-11" id="u154">ABOUT</span></p></a>
-       <a class="nonblock nontext clearfix grpelem" id="u7869-4" href="project.html" data-href="page:U15339"><!-- content --><p id="u7869-2"><span class="body-termina-11" id="u7869">PROJECTS</span></p></a>
+       <a class="nonblock nontext clearfix grpelem" id="u7869-4" href="work.html" data-href="page:U26837"><!-- content --><p id="u7869-2"><span class="body-termina-11" id="u7869">WORKS</span></p></a>
        <a class="nonblock nontext clearfix grpelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="body-termina-11" id="u7871">LABS</span></p></a>
        <div class="clip_frame grpelem" id="u30898"><!-- image -->
         <img class="block" id="u30898_img" src="images/nitchatothong_alpha.gif?crc=325294552" alt="" width="193" height="193"/>
@@ -109,16 +109,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="clearfix grpelem" id="pu31150-16"><!-- column -->
       <img class="colelem" id="u31150-16" alt="ณิชช า โตทอง (เฟม) | นักออกแบบ, ศิลปิน" width="297" height="32" src="images/u31150-16.png?crc=504684002" data-IBE-flags="txtStyleSrc"/><!-- rasterized frame -->
       <!-- m_editable region-id="editable-static-tag-U7817-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-      <div class="clearfix colelem" id="u7817-18" data-muse-uid="U7817" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+      <div class="clearfix colelem" id="u7817-15" data-muse-uid="U7817" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
        <p id="u7817-2"><span class="body-termina-11" id="u7817">Nitcha Tothong (Fame) | she/her</span></p>
        <p id="u7817-3">&nbsp;</p>
        <p id="u7817-5"><span class="body-termina-11" id="u7817-4">I’m a Bangkok-born, New York-based interdisciplinary designer, and artist whose work ranges from material sculpture, frame-by-frame animation to custom electronics. My work focused on cross-medium pollination, and the juxtaposition between digital and analog that inform each other, practices in visual language as well as physical media both in craft material and electronic computation.</span></p>
        <p id="u7817-6">&nbsp;</p>
        <p id="u7817-8"><span class="body-termina-11" id="u7817-7">My currently research concern is at the intersection of sensory experience and conscious experience, reframing the unconscious habits created by contemporary technology’s impact on daily life. The whimsical interaction and uneasy can disrupt social convention that creates unmindful and bring awareness. I hold a B.F.A. in Visual Communication Design from Rangsit University and an M.F.A. in Design &amp; Technology from Parsons School of Design.</span></p>
        <p id="u7817-9">&nbsp;</p>
-       <p id="u7817-12"><a class="nonblock" href="https://docs.google.com/spreadsheets/d/1XB2SViB9lAF5X_aDgA1HDin_NMToL6Dioica9LH_un8/edit?usp=sharing"><span class="body-termina-11" id="u7817-10">Download Nitcha's Resume</span></a></p>
-       <p id="u7817-15"><a class="nonblock" href="https://www.linkedin.com/in/nitcha-tothong-5a537184"><span class="body-termina-11" id="u7817-13">Connect on Linkedin</span></a></p>
-       <p id="u7817-16">&nbsp;</p>
+       <p id="u7817-13"><a class="nonblock" href="https://docs.google.com/spreadsheets/d/1XB2SViB9lAF5X_aDgA1HDin_NMToL6Dioica9LH_un8/edit?usp=sharing"><span class="body-termina-11" id="u7817-10">Download Nitcha's </span></a><span class="body-termina-11" id="u7817-12">CV</span></p>
       </div>
       <!-- /m_editable -->
       <!-- m_editable region-id="editable-static-tag-U24148-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
