--- a/lucid.html
+++ b/lucid.html
@@ -17,15 +17,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Lucid</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4180702233"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4196648491"/>
-  <link rel="stylesheet" type="text/css" href="css/lucid.css?crc=76994015" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=80932935"/>
+  <link rel="stylesheet" type="text/css" href="css/lucid.css?crc=240445087" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/quicksand:n4:all.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/FfTmT-uj2H7sKL3lnolv-3srxxol060deBNv4oLISj6feGqgf5WHK6GPHQJUwQbX5QwDWh4Kwebhjh9hjQBKFebaZQmqjAByFQmR5AJujcb35AFReKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJYiemkdA80jPGHfOYKMsMMeMb6MPGHfOdKMsMMeM96M9GIQWmDZZMgq5-3r39.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/ReWf0lwgBeHAFEmJ27hIyqaok_AjPA6DGrG90we6DRwfeGqgf5WHK6GPHQJUwQbX5QwDWh4Kwebhjh9hjQBKFebaZQmqjAByFQmR5AJujcb35AFReKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJYiemkdA80jPGHfOYKMsMMeMb6MPGHfOdKMsMMeM96M9GIQWmDZZMguwRMx69.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -39,7 +39,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="position_content" id="page_position_content">
     <div class="clearfix colelem" id="pu154-4"><!-- group -->
      <a class="nonblock nontext clearfix grpelem" id="u154-4" href="about.html" data-href="page:U2777"><!-- content --><p id="u154-2"><span class="body-termina-11" id="u154">ABOUT</span></p></a>
-     <a class="nonblock nontext clearfix grpelem" id="u7869-4" href="project.html" data-href="page:U15339"><!-- content --><p id="u7869-2"><span class="body-termina-11" id="u7869">PROJECTS</span></p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u7869-4" href="work.html" data-href="page:U26837"><!-- content --><p id="u7869-2"><span class="body-termina-11" id="u7869">WORKS</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="body-termina-11" id="u7871">LABS</span></p></a>
      <div class="clip_frame grpelem" id="u30898"><!-- image -->
       <img class="block" id="u30898_img" src="images/nitchatothong_alpha.gif?crc=325294552" alt="" width="193" height="193"/>
@@ -96,27 +96,27 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <div class="SSSlideLinks clearfix" data-col-pos="0" id="u9004"><!-- horizontal-rows box -->
         <!-- m_editable region-id="editable-static-tag-U9009-BP_infinity" template="lucid.html" data-type="image" data-ice-options="clickable" -->
         <div class="SSSlideLink clip_frame grpelem" data-col-pos="0" id="u9009" data-muse-uid="U9009" data-muse-type="img_frame"><!-- image -->
-         <img class="block" data-col-pos="0" id="u9009_img" src="images/sleeptalkinstallation-2_sm-crop-u9009.jpg?crc=346809518" alt="" width="83" height="70" data-muse-src="images/sleeptalkinstallation-2_sm-crop-u9009.jpg?crc=346809518"/>
+         <img class="block" data-col-pos="0" id="u9009_img" src="images/sleeptalkinstallation-2_sm-crop-u9009.jpg?crc=3937783478" alt="" width="83" height="70" data-muse-src="images/sleeptalkinstallation-2_sm-crop-u9009.jpg?crc=3937783478"/>
         </div>
         <!-- /m_editable -->
         <!-- m_editable region-id="editable-static-tag-U9013-BP_infinity" template="lucid.html" data-type="image" data-ice-options="clickable" -->
         <div class="SSSlideLink clip_frame grpelem" data-col-pos="1" id="u9013" data-muse-uid="U9013" data-muse-type="img_frame"><!-- image -->
-         <img class="block" data-col-pos="1" id="u9013_img" src="images/sleeptalkinstallation-5sm-crop-u9013.jpg?crc=411997977" alt="" width="83" height="70" data-muse-src="images/sleeptalkinstallation-5sm-crop-u9013.jpg?crc=411997977"/>
+         <img class="block" data-col-pos="1" id="u9013_img" src="images/sleeptalkinstallation-5sm-crop-u9013.jpg?crc=3823674346" alt="" width="83" height="70" data-muse-src="images/sleeptalkinstallation-5sm-crop-u9013.jpg?crc=3823674346"/>
         </div>
         <!-- /m_editable -->
         <!-- m_editable region-id="editable-static-tag-U9005-BP_infinity" template="lucid.html" data-type="image" data-ice-options="clickable" -->
         <div class="SSSlideLink clip_frame grpelem" data-col-pos="2" id="u9005" data-muse-uid="U9005" data-muse-type="img_frame"><!-- image -->
-         <img class="block" data-col-pos="2" id="u9005_img" src="images/sleeptalkinstallation-6sm-crop-u9005.jpg?crc=4275914722" alt="" width="83" height="70" data-muse-src="images/sleeptalkinstallation-6sm-crop-u9005.jpg?crc=4275914722"/>
+         <img class="block" data-col-pos="2" id="u9005_img" src="images/sleeptalkinstallation-6sm-crop-u9005.jpg?crc=351245052" alt="" width="83" height="70" data-muse-src="images/sleeptalkinstallation-6sm-crop-u9005.jpg?crc=351245052"/>
         </div>
         <!-- /m_editable -->
         <!-- m_editable region-id="editable-static-tag-U9011-BP_infinity" template="lucid.html" data-type="image" data-ice-options="clickable" -->
         <div class="SSSlideLink clip_frame grpelem" data-col-pos="3" id="u9011" data-muse-uid="U9011" data-muse-type="img_frame"><!-- image -->
-         <img class="block" data-col-pos="3" id="u9011_img" src="images/sleeptalkinstallation-8sm-crop-u9011.jpg?crc=63125808" alt="" width="83" height="70" data-muse-src="images/sleeptalkinstallation-8sm-crop-u9011.jpg?crc=63125808"/>
+         <img class="block" data-col-pos="3" id="u9011_img" src="images/sleeptalkinstallation-8sm-crop-u9011.jpg?crc=41021899" alt="" width="83" height="70" data-muse-src="images/sleeptalkinstallation-8sm-crop-u9011.jpg?crc=41021899"/>
         </div>
         <!-- /m_editable -->
         <!-- m_editable region-id="editable-static-tag-U9007-BP_infinity" template="lucid.html" data-type="image" data-ice-options="clickable" -->
         <div class="SSSlideLink clip_frame grpelem" data-col-pos="4" id="u9007" data-muse-uid="U9007" data-muse-type="img_frame"><!-- image -->
-         <img class="block" data-col-pos="4" id="u9007_img" src="images/sleeptalkinstallationcrop-crop-u9007.jpg?crc=3989294317" alt="" width="83" height="70" data-muse-src="images/sleeptalkinstallationcrop-crop-u9007.jpg?crc=3989294317"/>
+         <img class="block" data-col-pos="4" id="u9007_img" src="images/sleeptalkinstallationcrop-crop-u9007.jpg?crc=4119284275" alt="" width="83" height="70" data-muse-src="images/sleeptalkinstallationcrop-crop-u9007.jpg?crc=4119284275"/>
         </div>
         <!-- /m_editable -->
         <!-- m_editable region-id="editable-static-tag-U10696-BP_infinity" template="lucid.html" data-type="image" data-ice-options="clickable" -->
@@ -298,7 +298,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="SSSlideLinks clearfix" data-col-pos="1" id="u9085"><!-- horizontal-rows box -->
        <!-- m_editable region-id="editable-static-tag-U9372-BP_infinity" template="lucid.html" data-type="image" data-ice-options="clickable" -->
        <div class="SSSlideLink clip_frame grpelem" data-col-pos="0" id="u9372" data-muse-uid="U9372" data-muse-type="img_frame"><!-- image -->
-        <img class="block" data-col-pos="0" id="u9372_img" src="images/srb2-crop-u9372.jpg?crc=4277651641" alt="" width="82" height="70" data-muse-src="images/srb2-crop-u9372.jpg?crc=4277651641"/>
+        <img class="block" data-col-pos="0" id="u9372_img" src="images/srb2-crop-u9372.jpg?crc=347835917" alt="" width="82" height="70" data-muse-src="images/srb2-crop-u9372.jpg?crc=347835917"/>
        </div>
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U9363-BP_infinity" template="lucid.html" data-type="image" data-ice-options="clickable" -->
@@ -308,12 +308,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U9381-BP_infinity" template="lucid.html" data-type="image" data-ice-options="clickable" -->
        <div class="SSSlideLink clip_frame grpelem" data-col-pos="2" id="u9381" data-muse-uid="U9381" data-muse-type="img_frame"><!-- image -->
-        <img class="block" data-col-pos="2" id="u9381_img" src="images/srb3-crop-u9381.jpg?crc=4019424908" alt="" width="82" height="70" data-muse-src="images/srb3-crop-u9381.jpg?crc=4019424908"/>
+        <img class="block" data-col-pos="2" id="u9381_img" src="images/srb3-crop-u9381.jpg?crc=4003144197" alt="" width="82" height="70" data-muse-src="images/srb3-crop-u9381.jpg?crc=4003144197"/>
        </div>
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U9090-BP_infinity" template="lucid.html" data-type="image" data-ice-options="clickable" -->
        <div class="SSSlideLink clip_frame grpelem" data-col-pos="3" id="u9090" data-muse-uid="U9090" data-muse-type="img_frame"><!-- image -->
-        <img class="block" data-col-pos="3" id="u9090_img" src="images/lucidprocess1-crop-u9090.jpg?crc=297640535" alt="" width="82" height="70" data-muse-src="images/lucidprocess1-crop-u9090.jpg?crc=297640535"/>
+        <img class="block" data-col-pos="3" id="u9090_img" src="images/lucidprocess1-crop-u9090.jpg?crc=3926386993" alt="" width="82" height="70" data-muse-src="images/lucidprocess1-crop-u9090.jpg?crc=3926386993"/>
        </div>
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U9140-BP_infinity" template="lucid.html" data-type="image" data-ice-options="clickable" -->
