--- a/remembering.html
+++ b/remembering.html
@@ -17,15 +17,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>remembering</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4180702233"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4196648491"/>
-  <link rel="stylesheet" type="text/css" href="css/remembering.css?crc=402264079" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=80932935"/>
+  <link rel="stylesheet" type="text/css" href="css/remembering.css?crc=3883287888" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/quicksand:n4:all.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/aO_QCulnDirIg8OBfEGf-eNbVcVBZSIy1eWRA-8VUtbfeGqgf5WHK6GPHQJUwQbX5QwDWh4Kwebhjh9hjQBKFebaZQmqjAByFQmR5AJujcb35AFReKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJYiemkdA80jPGHfOYKMsMMeMb6MPGHfOdKMsMMeM96M9GIQWmDZZMgnp-3r39.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/OgPH9KkVshTVvPra-aa83h5f21r2tMv-fvcdJDceGPGfeGqgf5WHK6GPHQJUwQbX5QwDWh4Kwebhjh9hjQBKFebaZQmqjAByFQmR5AJujcb35AFReKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJYiemkdA80jPGHfOYKMsMMeMb6MPGHfOdKMsMMeM96M9GIQWmDZZMg1v1Mx69.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -42,7 +42,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <img class="block" id="u30898_img" src="images/nitchatothong_alpha.gif?crc=325294552" alt="" width="193" height="193"/>
      </div>
      <a class="nonblock nontext clearfix grpelem" id="u154-4" href="about.html" data-href="page:U2777"><!-- content --><p id="u154-2"><span class="body-termina-11" id="u154">ABOUT</span></p></a>
-     <a class="nonblock nontext clearfix grpelem" id="u7869-4" href="project.html" data-href="page:U15339"><!-- content --><p id="u7869-2"><span class="body-termina-11" id="u7869">PROJECTS</span></p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u7869-4" href="work.html" data-href="page:U26837"><!-- content --><p id="u7869-2"><span class="body-termina-11" id="u7869">WORKS</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="body-termina-11" id="u7871">LABS</span></p></a>
     </div>
     <div class="clearfix colelem" id="pu27079"><!-- group -->
