--- a/revoke.html
+++ b/revoke.html
@@ -17,15 +17,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Revoke</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4180702233"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4196648491"/>
-  <link rel="stylesheet" type="text/css" href="css/revoke.css?crc=27587720" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=80932935"/>
+  <link rel="stylesheet" type="text/css" href="css/revoke.css?crc=437991279" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/quicksand:n4:all.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/TDZs3W7RNlYZuxIsGdlHNVi4eSAMmjQvARTGRiDmh-tfeGqgf5WHK6GPHQJUwQbX5QwDWh4Kwebhjh9hjQBKFebaZQmqjAByFQmR5AJujcb35AFReKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJYiemkdA80jPGHfOdKMsMMeM96MPGHfOYKMsMMeMb6M9GIQWmDZZMgK0-3r39.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/hHalUMC-KqoYtqQht1lVuyXUN2ESCsSws81_paZ3LbIfeGqgf5WHK6GPHQJUwQbX5QwDWh4Kwebhjh9hjQBKFebaZQmqjAByFQmR5AJujcb35AFReKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJYiemkdA80jPGHfOdKMsMMeM96MPGHfOYKMsMMeMb6M9GIQWmDZZMg3SRMx69.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -44,7 +44,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="clearfix grpelem" id="ppu154-4"><!-- column -->
     <div class="clearfix colelem" id="pu154-4"><!-- group -->
      <a class="nonblock nontext clearfix grpelem" id="u154-4" href="about.html" data-href="page:U2777"><!-- content --><p id="u154-2"><span class="body-termina-11" id="u154">ABOUT</span></p></a>
-     <a class="nonblock nontext clearfix grpelem" id="u7869-4" href="project.html" data-href="page:U15339"><!-- content --><p id="u7869-2"><span class="body-termina-11" id="u7869">PROJECTS</span></p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u7869-4" href="work.html" data-href="page:U26837"><!-- content --><p id="u7869-2"><span class="body-termina-11" id="u7869">WORKS</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="body-termina-11" id="u7871">LABS</span></p></a>
      <div class="clip_frame grpelem" id="u30898"><!-- image -->
       <img class="block" id="u30898_img" src="images/nitchatothong_alpha.gif?crc=325294552" alt="" width="193" height="193"/>
@@ -89,7 +89,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U6365-BP_infinity" template="revoke.html" data-type="image" data-ice-options="srcAttr=data-src" -->
        <div class="SSSlide invi clip_frame grpelem" data-col-pos="1" id="u6365" data-muse-uid="U6365" data-muse-type="img_frame"><!-- image -->
-        <img class="block ImageInclude" data-col-pos="1" id="u6365_img" data-src="images/revoke_screen%20shot%202014-01-05%20at%2030033%20am-crop-u6365.jpg?crc=3777530401" src="images/blank.gif?crc=4208392903" alt="" data-width="640" data-height="610" data-muse-src="images/revoke_screen%20shot%202014-01-05%20at%2030033%20am-crop-u6365.jpg?crc=3777530401"/>
+        <img class="block ImageInclude" data-col-pos="1" id="u6365_img" data-src="images/revoke_screen%20shot%202014-01-05%20at%2030033%20am-crop-u6365.jpg?crc=3824485579" src="images/blank.gif?crc=4208392903" alt="" data-width="640" data-height="610" data-muse-src="images/revoke_screen%20shot%202014-01-05%20at%2030033%20am-crop-u6365.jpg?crc=3824485579"/>
        </div>
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U6530-BP_infinity" template="revoke.html" data-type="image" data-ice-options="srcAttr=data-src" -->
@@ -109,7 +109,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U6575-BP_infinity" template="revoke.html" data-type="image" data-ice-options="srcAttr=data-src" -->
        <div class="SSSlide invi clip_frame grpelem" data-col-pos="5" id="u6575" data-muse-uid="U6575" data-muse-type="img_frame"><!-- image -->
-        <img class="block ImageInclude" data-col-pos="5" id="u6575_img" data-src="images/revoke_7-crop-u6575.jpg?crc=4049233913" src="images/blank.gif?crc=4208392903" alt="" data-width="640" data-height="610" data-muse-src="images/revoke_7-crop-u6575.jpg?crc=4049233913"/>
+        <img class="block ImageInclude" data-col-pos="5" id="u6575_img" data-src="images/revoke_7-crop-u6575.jpg?crc=135813510" src="images/blank.gif?crc=4208392903" alt="" data-width="640" data-height="610" data-muse-src="images/revoke_7-crop-u6575.jpg?crc=135813510"/>
        </div>
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U6590-BP_infinity" template="revoke.html" data-type="image" data-ice-options="srcAttr=data-src" -->
@@ -119,12 +119,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U6603-BP_infinity" template="revoke.html" data-type="image" data-ice-options="srcAttr=data-src" -->
        <div class="SSSlide invi clip_frame grpelem" data-col-pos="7" id="u6603" data-muse-uid="U6603" data-muse-type="img_frame"><!-- image -->
-        <img class="block ImageInclude" data-col-pos="7" id="u6603_img" data-src="images/revoke_2-crop-u6603.jpg?crc=3895443546" src="images/blank.gif?crc=4208392903" alt="" data-width="640" data-height="610" data-muse-src="images/revoke_2-crop-u6603.jpg?crc=3895443546"/>
+        <img class="block ImageInclude" data-col-pos="7" id="u6603_img" data-src="images/revoke_2-crop-u6603.jpg?crc=3884316493" src="images/blank.gif?crc=4208392903" alt="" data-width="640" data-height="610" data-muse-src="images/revoke_2-crop-u6603.jpg?crc=3884316493"/>
        </div>
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U12015-BP_infinity" template="revoke.html" data-type="image" data-ice-options="srcAttr=data-src" -->
        <div class="SSSlide invi clip_frame grpelem" data-col-pos="8" id="u12015" data-muse-uid="U12015" data-muse-type="img_frame"><!-- image -->
-        <img class="block ImageInclude" data-col-pos="8" id="u12015_img" data-src="images/revoke_4_rca-crop-u12015.jpg?crc=4253290073" src="images/blank.gif?crc=4208392903" alt="" data-width="640" data-height="610" data-muse-src="images/revoke_4_rca-crop-u12015.jpg?crc=4253290073"/>
+        <img class="block ImageInclude" data-col-pos="8" id="u12015_img" data-src="images/revoke_4_rca-crop-u12015.jpg?crc=4109086507" src="images/blank.gif?crc=4208392903" alt="" data-width="640" data-height="610" data-muse-src="images/revoke_4_rca-crop-u12015.jpg?crc=4109086507"/>
        </div>
        <!-- /m_editable -->
       </div>
@@ -138,7 +138,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U6368-BP_infinity" template="revoke.html" data-type="image" data-ice-options="clickable" -->
        <div class="SSSlideLink clip_frame grpelem" data-col-pos="1" id="u6368" data-muse-uid="U6368" data-muse-type="img_frame"><!-- image -->
-        <img class="block" data-col-pos="1" id="u6368_img" src="images/revoke_screen%20shot%202014-01-05%20at%2030033%20am-crop-u6368.jpg?crc=4144536111" alt="" width="85" height="77" data-muse-src="images/revoke_screen%20shot%202014-01-05%20at%2030033%20am-crop-u6368.jpg?crc=4144536111"/>
+        <img class="block" data-col-pos="1" id="u6368_img" src="images/revoke_screen%20shot%202014-01-05%20at%2030033%20am-crop-u6368.jpg?crc=3899760329" alt="" width="85" height="77" data-muse-src="images/revoke_screen%20shot%202014-01-05%20at%2030033%20am-crop-u6368.jpg?crc=3899760329"/>
        </div>
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U6533-BP_infinity" template="revoke.html" data-type="image" data-ice-options="clickable" -->
@@ -158,7 +158,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U6578-BP_infinity" template="revoke.html" data-type="image" data-ice-options="clickable" -->
        <div class="SSSlideLink clip_frame grpelem" data-col-pos="5" id="u6578" data-muse-uid="U6578" data-muse-type="img_frame"><!-- image -->
-        <img class="block" data-col-pos="5" id="u6578_img" src="images/revoke_8-crop-u6578.jpg?crc=289591448" alt="" width="85" height="77" data-muse-src="images/revoke_8-crop-u6578.jpg?crc=289591448"/>
+        <img class="block" data-col-pos="5" id="u6578_img" src="images/revoke_8-crop-u6578.jpg?crc=490023611" alt="" width="85" height="77" data-muse-src="images/revoke_8-crop-u6578.jpg?crc=490023611"/>
        </div>
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U6593-BP_infinity" template="revoke.html" data-type="image" data-ice-options="clickable" -->
@@ -168,12 +168,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U6606-BP_infinity" template="revoke.html" data-type="image" data-ice-options="clickable" -->
        <div class="SSSlideLink clip_frame grpelem" data-col-pos="7" id="u6606" data-muse-uid="U6606" data-muse-type="img_frame"><!-- image -->
-        <img class="block" data-col-pos="7" id="u6606_img" src="images/revoke_2-crop-u6606.jpg?crc=371205583" alt="" width="85" height="77" data-muse-src="images/revoke_2-crop-u6606.jpg?crc=371205583"/>
+        <img class="block" data-col-pos="7" id="u6606_img" src="images/revoke_2-crop-u6606.jpg?crc=3862552915" alt="" width="85" height="77" data-muse-src="images/revoke_2-crop-u6606.jpg?crc=3862552915"/>
        </div>
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U12018-BP_infinity" template="revoke.html" data-type="image" data-ice-options="clickable" -->
        <div class="SSSlideLink clip_frame grpelem" data-col-pos="8" id="u12018" data-muse-uid="U12018" data-muse-type="img_frame"><!-- image -->
-        <img class="block" data-col-pos="8" id="u12018_img" src="images/revoke_4_rca-crop-u12018.jpg?crc=3972797496" alt="" width="85" height="77" data-muse-src="images/revoke_4_rca-crop-u12018.jpg?crc=3972797496"/>
+        <img class="block" data-col-pos="8" id="u12018_img" src="images/revoke_4_rca-crop-u12018.jpg?crc=4288572872" alt="" width="85" height="77" data-muse-src="images/revoke_4_rca-crop-u12018.jpg?crc=4288572872"/>
        </div>
        <!-- /m_editable -->
       </div>
