--- a/work.html
+++ b/work.html
@@ -17,15 +17,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>work</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4180702233"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4196648491"/>
-  <link rel="stylesheet" type="text/css" href="css/work.css?crc=161075410" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=80932935"/>
+  <link rel="stylesheet" type="text/css" href="css/work.css?crc=3781562763" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/quicksand:n4,i4:all.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/2kDeINUiE9xkPW5egAHaBLX_JWPFs5t_Qi-6jAeDSWIfe1XJoS7HfyJTwRIUF2bowDFLjcJ3Z2ZRZQZywAJXZ2i8FAsyjAIuFAwojRmKZ2Mojhw-HPG0dc8XjhyyZcI0dA9Cdc8XjhyyZcI0dA9CiaiaOcoTieFGjAZyOcu8J6iXZW4l-AoyH6GJCpJgIMMjgfMgP6sFiWF8qMeCon2_gb.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/k7V8t2EL_5BFtUpO2sjqNwMo1B6fcXPdRojYQKZOz_9fe1XJoS7HfyJTwRIUF2bowDFLjcJ3Z2ZRZQZywAJXZ2i8FAsyjAIuFAwojRmKZ2Mojhw-HPG0dc8XjhyyZcI0dA9Cdc8XjhyyZcI0dA9CiaiaOcoTieFGjAZyOcu8J6iXZW4l-AoyH6GJCpJgIMMjgfMgP6sFiWF8qMeSkS2rgb.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -47,7 +47,7 @@ transition:300ms;
     <a class="anchor_item colelem" id="top_projectpage"></a>
     <div class="clearfix colelem" id="pu154-4"><!-- group -->
      <a class="nonblock nontext clearfix grpelem" id="u154-4" href="about.html" data-href="page:U2777"><!-- content --><p id="u154-2"><span class="body-termina-11" id="u154">ABOUT</span></p></a>
-     <a class="nonblock nontext clearfix grpelem" id="u7869-4" href="project.html" data-href="page:U15339"><!-- content --><p id="u7869-2"><span class="body-termina-11" id="u7869">PROJECTS</span></p></a>
+     <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u7869-4" href="work.html" data-href="page:U26837"><!-- content --><p id="u7869-2"><span class="body-termina-11" id="u7869">WORKS</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="body-termina-11" id="u7871">LABS</span></p></a>
      <div class="clip_frame grpelem" id="u30898"><!-- image -->
       <img class="block" id="u30898_img" src="images/nitchatothong_alpha.gif?crc=325294552" alt="" width="193" height="193"/>
@@ -57,7 +57,7 @@ transition:300ms;
     <div class="clearfix colelem" id="ppu30847"><!-- group -->
      <div class="clearfix grpelem" id="pu30847"><!-- group -->
       <!-- m_editable region-id="editable-static-tag-U30847-BP_infinity" template="work.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
-      <a class="nonblock nontext clip_frame grpelem" id="u30847" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U30847" data-muse-type="img_frame"><!-- image --><img class="block" id="u30847_img" src="images/wonderfruit2018_sirintip_tour-200-crop-u30847.jpg?crc=4013501931" alt="" width="400" height="241" data-muse-src="images/wonderfruit2018_sirintip_tour-200-crop-u30847.jpg?crc=4013501931"/></a>
+      <a class="nonblock nontext clip_frame grpelem" id="u30847" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U30847" data-muse-type="img_frame"><!-- image --><img class="block" id="u30847_img" src="images/wonderfruit2018_sirintip_tour-200-crop-u30847.jpg?crc=462584012" alt="" width="400" height="241" data-muse-src="images/wonderfruit2018_sirintip_tour-200-crop-u30847.jpg?crc=462584012"/></a>
       <!-- /m_editable -->
       <!-- m_editable region-id="editable-static-tag-U30854-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
       <a class="nonblock nontext rgba-background clearfix grpelem" id="u30854-6" href="shoulder.html" data-href="page:U30404" data-muse-uid="U30854" data-muse-type="txt_frame"><!-- content --><p id="u30854-2">WONDER COLLAR</p><p id="u30854-4">Art Direction, Design, Fabrication</p></a>
@@ -78,7 +78,7 @@ transition:300ms;
      <a class="nonblock nontext clip_frame grpelem" id="u29617" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U29617" data-muse-type="img_frame"><!-- image --><img class="block" id="u29617_img" src="images/55bar_feb28_aw_sm-crop-u29617.png?crc=97859911" alt="" width="400" height="214" data-muse-src="images/55bar_feb28_aw_sm-crop-u29617.png?crc=97859911"/></a>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U29631-BP_infinity" template="work.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext clip_frame grpelem" id="u29631" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U29631" data-muse-type="img_frame"><!-- image --><img class="block" id="u29631_img" src="images/ahtt_namecard-crop-u29631.jpg?crc=155050826" alt="" width="400" height="226" data-muse-src="images/ahtt_namecard-crop-u29631.jpg?crc=155050826"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u29631" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U29631" data-muse-type="img_frame"><!-- image --><img class="block" id="u29631_img" src="images/ahtt_namecard-crop-u29631.jpg?crc=3785542287" alt="" width="400" height="226" data-muse-src="images/ahtt_namecard-crop-u29631.jpg?crc=3785542287"/></a>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U26732-BP_infinity" template="work.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
      <a class="nonblock nontext clip_frame grpelem" id="u26732" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U26732" data-muse-type="img_frame"><!-- image --><img class="block" id="u26732_img" src="images/funk_cover-crop-u26732.jpg?crc=4129758912" alt="" width="400" height="215" data-muse-src="images/funk_cover-crop-u26732.jpg?crc=4129758912"/></a>
@@ -99,7 +99,7 @@ transition:300ms;
     <div class="clearfix colelem" id="pu29357"><!-- group -->
      <!-- m_editable region-id="editable-static-tag-U29357-BP_infinity" template="work.html" data-type="image" -->
      <div class="clip_frame clearfix grpelem" id="u29357" data-muse-uid="U29357" data-muse-type="img_frame"><!-- image -->
-      <img class="position_content" id="u29357_img" src="images/pijika.gif?crc=77994269" alt="" width="514" height="284" data-muse-src="images/pijika.gif?crc=77994269"/>
+      <img class="position_content" id="u29357_img" src="images/pijika2.gif?crc=77994269" alt="" width="514" height="284" data-muse-src="images/pijika2.gif?crc=77994269"/>
      </div>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U29345-BP_infinity" template="work.html" data-type="image" -->
